--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robot Bobby Earth</title>
+    <title>Space Walk | Sandro Filho DEV</title>
     <style>
       body {
         margin: 0;
@@ -13,8 +13,8 @@
 			{
 				"imports": {
 					"three": "https://cdn.jsdelivr.net/npm/three@0.131/build/three.module.js",
-          "jsm/": "https://cdn.jsdelivr.net/npm/three@0.131/examples/jsm/"
-        }
+                    "jsm/": "https://cdn.jsdelivr.net/npm/three@0.131/examples/jsm/"
+                    }
 			}
 		</script>
   </head>
